--- a/src/app/pages/monstre/home/monstre-home.component.html
+++ b/src/app/pages/monstre/home/monstre-home.component.html
@@ -2,3 +2,5 @@
 <h2>Gestion des monstres</h2>
 
 <span>Ici, vous pouvez trouver ou créer un monstre. Vous pouvez aussi créer une table de rencontre avec une probabilité pour chaque monstre</span>
+
+<input [value]="test" />
