mise en place du jet de de

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,4 +1,5 @@
 <div class="header">
   <button routerLink="/home" >Retour à la page d'accueil</button>
   <button routerLink="/monstre-home">Gestion des monstres</button>
+  <button routerLink="/jet">Jet de dé</button>
 </div>
