mise en place du css

--- a/src/app/pages/jet/jet.component.html
+++ b/src/app/pages/jet/jet.component.html
@@ -12,8 +12,9 @@
 <button type="button" (click)="jetD10()">D10</button>
 <button type="button" (click)="jetD12()">D12</button>
 <button type="button" (click)="jetD20()">D20</button>
-<span><input id="nbDes" type="number"/><p>D</p><input id="nbFace" type="number"/></span>
+<br>
+<input class="inputDe" id="nbDes" type="number"/>D<input id="nbFace" type="number"/>
 
 </div>
 <br>
-<span id="resultatJet">Résultat du jet = {{resultat}}</span>
+<span class="inputDe" id="resultatJet">Résultat du jet = {{resultat}}</span>
