--- a/src/app/pages/jet/jet.component.html
+++ b/src/app/pages/jet/jet.component.html
@@ -2,6 +2,17 @@
 <br>
 <h2>Jet de dé</h2>
 <br>
-<span>Ici, choississez le jet de dé que vous souhaitez faire</span>
+<span>Choissisez le format de jet de dés que vous souhaitez</span>
+<span><div>
+    <input type="radio" id="classic" name="drone" value="classic"
+           checked>
+    <label for="huey">Classic</label>
+  </div>
+  
+  <div>
+    <input type="radio" id="werewolf" name="drone" value="werewolf">
+    <label for="dewey">Loup-Garou</label>
+  </div>
+</span>
 <br/>
 <jet-classic></jet-classic>
