mise en place de la partie WW

--- a/src/app/pages/jet/jet.component.html
+++ b/src/app/pages/jet/jet.component.html
@@ -19,3 +19,4 @@
 <br/>
 <div *ngIf="jeu === 'classic'"><jet-classic></jet-classic></div>
 <div *ngIf="jeu === 'shadowrun'"><jet-shadowrun></jet-shadowrun></div>
+<div *ngIf="jeu === 'ww'"><jet-ww></jet-ww></div>
