--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,5 +1,38 @@
-<div class="header">
-  <button routerLink="/home" >Retour à la page d'accueil</button>
-  <button routerLink="/monstre-home">Gestion des monstres</button>
-  <button routerLink="/jet">Jet de dé</button>
-</div>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-brand">
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
+  </div>
+
+  <div id="navbarBasicExample" class="navbar-menu">
+    <div class="navbar-start">
+      <a class="navbar-item" routerLink="/home">
+        Accueil
+      </a>
+
+      <a class="navbar-item" routerLink="/monstre-home">
+        Monstres
+      </a>
+
+      <a class="navbar-link" routerLink="/jet">
+        Jet de dés
+      </a>
+    </div>
+
+    <div class="navbar-end">
+      <div class="navbar-item">
+        <div class="buttons">
+          <a class="button is-primary">
+            <strong>Sign up</strong>
+          </a>
+          <a class="button is-light">
+            Log in
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+</nav>
