--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
+      <figure class="navbar-item image">
+        <img class="is-rounded" src="../../common/ressource/image/wow_parfum_jdr.jpg">
+      </figure>
     <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
       <span aria-hidden="true"></span>
@@ -17,7 +20,7 @@
         Monstres
       </a>
 
-      <a class="navbar-link" routerLink="/jet">
+      <a class="navbar-item" routerLink="/jet">
         Jet de dés
       </a>
     </div>
