--- a/src/app/pages/jet/classic/jetClassic.component.html
+++ b/src/app/pages/jet/classic/jetClassic.component.html
@@ -1,27 +1,64 @@
 <span>Quel dé souhaitez vous lancer?</span>
-<br>
-<div >
-<button type="button" (click)="jet(4)">D4</button>
-<button type="button" (click)="jet(6)">D6</button>
-<button type="button" (click)="jet(8)">D8</button>
-<button type="button" (click)="jet(10)">D10</button>
-<button type="button" (click)="jet(12)">D12</button>
-<button type="button" (click)="jet(20)">D20</button>
-<button type="button" (click)="jet(100)">D100</button>
-<br>
-<input class="inputDe" [(ngModel)]="nbDe" id="nbDes" type="number" min="1"/>D<input class="inputDe" [(ngModel)]="nbFace"  id="nbFace" type="number" min="2"/><button type="button" (click)="jetCustom()">Lancer</button>
-
+<br />
+<br />
+<div class="tile is-parent is-vertical">
+  <div class="tile is-child">
+    <button class="button is-rounded is-info" type="button" (click)="jet(2)">
+      D2
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(4)">
+      D4
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(6)">
+      D6
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(8)">
+      D8
+    </button>
+  </div>
+  <div class="tile is-child">
+    <button class="button is-rounded is-info" type="button" (click)="jet(10)">
+      D10
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(12)">
+      D12
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(20)">
+      D20
+    </button>
+    <button class="button is-rounded is-info" type="button" (click)="jet(100)">
+      D100
+    </button>
+  </div>
+  <br />
+  <input
+    class="input inputDe"
+    [(ngModel)]="jetString"
+    id="jetString"
+    type="text"/>
+    <button class="button inputDe is-rounded is-info" type="button" (click)="jetRegex()">Lancer</button>
 </div>
-<br>
-<span>Affichage du résultat</span>
-<span><div>
-    <input type="radio" id="Liste" name="affichage" value="Liste" [(ngModel)]="affichage">
-    <label for="Liste">Liste</label>
+<br />
+<div>
+  <span>Affichage du résultat</span>
+  <div class="control">
+    <label class="radio">
+      <input type="radio" id="Liste" name="affichage"
+      
+        value="Liste" [(ngModel)]="affichage"/>
+      <label for="Liste">Liste</label>
+    </label>
+    <label class="radio">
+      <input type="radio" id="Somme" name="affichage"
+        value="Somme" [(ngModel)]="affichage"/>
+      <label for="Somme">Somme</label>
+    </label>
+    <br />
+    <span *ngIf="affichage === 'Liste'" id="resultatJet">
+      Résultat du jet = {{ resultat }}
+    </span>
+    <span *ngIf="affichage === 'Somme'" id="resultatJet">
+      Résultat du jet = {{ somme }}
+    </span>
   </div>
-  <div>
-    <input type="radio" id="Somme" name="affichage" value="Somme" [(ngModel)]="affichage">
-    <label for="Somme">Somme</label>
-  </div>
-</span>
-<span *ngIf="affichage === 'Liste'" id="resultatJet">Résultat du jet = {{resultat}}</span>
-<span *ngIf="affichage === 'Somme'" id="resultatJet">Résultat du jet = {{somme}}</span>
+</div>
